syntax = "proto3";

package pipeline;

service Pipeline {
  rpc Submit (SubmitRequest) returns (SubmitReply) {}
}

message SubmitRequest {
  string pipeline_spec = 1;
  repeated InputStream inputstreams = 2;
}

message SubmitReply {
  bool success = 1;
  string mpd_url = 2;
  string error_msg = 3;
}

message InputStream {
  string name = 1;
  string type = 2;
  repeated Input inputs = 3;
}

message Input {
  string uri = 1;
  string lineage = 2;
}
